package com.mouse.bet.service;

import com.mouse.bet.domain.entities.Game;
import com.mouse.bet.domain.models.PlaywrightContext;
import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import org.springframework.stereotype.Service;

import java.time.LocalDateTime;
import java.util.ArrayList;
import java.util.List;

/**
 * GameScraperService
 *
 * Application service responsible for:
 * - Orchestrating Playwright scraping workflow
 * - Extracting games starting within next 3 hours
 * - Mapping raw browser data to Game entities
 * - Delegating persistence to GameService
 *
 * This class does NOT manage Playwright internals directly.
 */
@Slf4j
@Service
@RequiredArgsConstructor
public class GameScraperService {

    private final GameService gameService;

    /**
     * Main entry point for scraping process.
     *
     * Flow:
     * 1. Initialize PlaywrightContext
     * 2. Prepare browser/session
     * 3. Ensure login
     * 4. Navigate to games page
     * 5. Scrape games starting in next 3 hours
     * 6. Persist games
     * 7. Cleanup resources
     */
    public void runScraper() {

        log.info("Starting game scraping process...");

        PlaywrightContext pwContext = new PlaywrightContext();

        try {

            initializeInfrastructure(pwContext);

            ensureLoggedIn(pwContext); //todo: no login for scraper service

            navigateToGamesPage(pwContext);

            List<Game> games = scrapeGamesStartingNext3Hours(pwContext);

            gameService.saveScrapedGames(games);

        } catch (Exception ex) {
            log.error("Error during scraping process", ex);
        } finally {
            cleanup(pwContext);
        }

        log.info("Scraping process completed.");
    }

    /**
     * Initialize Playwright infrastructure.
     *
     * Pseudocode:
     * - Create Playwright instance
     * - Launch browser
     * - Create context (load storage state if exists)
     * - Create new page
     * - Set all into PlaywrightContext
     */
    private void initializeInfrastructure(PlaywrightContext context) {

        // Pseudocode:
        // playwright = Playwright.create()
        // browser = playwright.chromium().launch(...)
        // browserContext = browser.newContext(storageState if exists)
        // page = browserContext.newPage()
        //
        // context.setPlaywright(playwright)
        // context.setBrowser(browser)
        // context.setContext(browserContext)
        // context.setPage(page)

        log.info("Playwright infrastructure initialized.");
    }

    /**
     * Ensure the user is logged into the betting platform.
     *
     * Pseudocode:
     * - Navigate to dashboard
     * - Check if logout/profile element exists
     * - If not logged in:
     *     - Navigate to login page
     *     - Fill credentials
     *     - Submit login
     *     - Wait for successful navigation
     *     - Save storage state
     */
    private void ensureLoggedIn(PlaywrightContext context) {

        // Pseudocode using context.getPage()

        log.info("Login validation completed.");
    }

    /**
     * Navigate to games page.
     *
     * Pseudocode:
     * - page.navigate(gamesUrl)
     * - wait for load state
     */
    private void navigateToGamesPage(PlaywrightContext context) {

        // Pseudocode:
        // context.getPage().navigate("https://betting-site.com/games")

        log.info("Navigated to games page.");
    }

    /**
     * Scrape games that start within next 3 hours.
     *
     * Pseudocode:
     * - Query all game row elements
     * - For each row:
     *      - Extract start time
     *      - Compare:
     *          now <= startTime <= now + 3 hours
     *      - Extract home team
     *      - Extract away team
     *      - Build Game entity
     * - Return list
     */
    private List<Game> scrapeGamesStartingNext3Hours(PlaywrightContext context) {

        List<Game> games = new ArrayList<>();

        LocalDateTime now = LocalDateTime.now();
        LocalDateTime threeHoursLater = now.plusHours(3);

        // Pseudocode:
        // elements = context.getPage().querySelectorAll(gameRowSelector)
        //
        // for each element:
        //     parse startTime
        //     if startTime between now and threeHoursLater:
        //         parse homeTeam
        //         parse awayTeam
        //         games.add(Game.builder()...build())

        log.info("Scraped {} games starting within next 3 hours.", games.size());

        return games;
    }

    /**
     * Cleanup Playwright resources safely.
     *
     * Pseudocode:
     * - context.getPage().close()
     * - context.getContext().close()
     * - context.getBrowser().close()
     * - context.getPlaywright().close()
     */
    private void cleanup(PlaywrightContext context) {

        // Pseudocode:
        // safely close resources if not null

        log.info("Playwright resources cleaned up.");
    }
}
